--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/certificate-pdf-md.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/certificate-pdf-md.html
@@ -187,8 +187,8 @@ footer {
           <tbody>
             <tr class="light-border">
                 <th scope="row" id="left-align">BCG</th>
-                <td>{{ vaccine.bcg_brand }}</td>
-                <td>{{ vaccine.bcg_date }}</td>
+                <td>{{ vaccine.bcg_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.bcg_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
@@ -196,62 +196,62 @@ footer {
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Hepatitis B</th>
-                <td>{{ vaccine.hepb1_brand }}</td>
-                <td>{{ vaccine.hepb1_date }}</td>
-                <td>{{ vaccine.hepb2_date }}</td>
-                <td>{{ vaccine.hepb3_date }}</td>
+                <td>{{ vaccine.hepb1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.hepb1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hepb2_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hepb3_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">DTaP/DTwP</th>
-                <td>{{ vaccine.dtap1_brand }}</td>
-                <td>{{ vaccine.dtap1_date }}</td>
-                <td>{{ vaccine.dtap2_date }}</td>
-                <td>{{ vaccine.dtap3_date }}</td>
-                <td>{{ vaccine.dtap4_date }}</td>
-                <td>{{ vaccine.dtap5_date }}</td>
+                <td>{{ vaccine.dtap1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.dtap1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.dtap2_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.dtap3_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.dtap4_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.dtap5_date|default_if_none:'' }}</td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">OPV/IPV</th>
-                <td>{{ vaccine.ipv1_brand }}</td>
-                <td>{{ vaccine.ipv1_date }}</td>
-                <td>{{ vaccine.ipv2_date }}</td>
-                <td>{{ vaccine.ipv3_date }}</td>
-                <td>{{ vaccine.ipv4_date }}</td>
-                <td>{{ vaccine.ipv5_date }}</td>
+                <td>{{ vaccine.ipv1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.ipv1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.ipv2_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.ipv3_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.ipv4_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.ipv5_date|default_if_none:'' }}</td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Hib</th>
-                <td>{{ vaccine.hib1_brand }}</td>
-                <td>{{ vaccine.hib1_date }}</td>
-                <td>{{ vaccine.hib2_date }}</td>
-                <td>{{ vaccine.hib3_date }}</td>
-                <td>{{ vaccine.hib4_date }}</td>
+                <td>{{ vaccine.hib1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.hib1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hib2_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hib3_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hib4_date|default_if_none:'' }}</td>
                 <td></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">PCV</th>
-                <td>{{ vaccine.pcv1_brand }}</td>
-                <td>{{ vaccine.pcv1_date }}</td>
-                <td>{{ vaccine.pcv2_date }}</td>
-                <td>{{ vaccine.pcv3_date }}</td>
-                <td>{{ vaccine.pcv4_date }}</td>
+                <td>{{ vaccine.pcv1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.pcv1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.pcv2_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.pcv3_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.pcv4_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Rotavirus</th>
-                <td>{{ vaccine.rota1_brand }}</td>
-                <td>{{ vaccine.rota1_date }}</td>
-                <td>{{ vaccine.rota2_date }}</td>
-                <td>{{ vaccine.rota3_date }}</td>
+                <td>{{ vaccine.rota1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.rota1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.rota2_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.rota3_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Measles</th>
-                <td>{{ vaccine.msl_brand }}</td>
-                <td>{{ vaccine.msl_date }}</td>
+                <td>{{ vaccine.msl_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.msl_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
@@ -259,53 +259,53 @@ footer {
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">MMR</th>
-                <td>{{ vaccine.mmr1_brand }}</td>
-                <td>{{ vaccine.mmr1_date }}</td>
-                <td>{{ vaccine.mmr2_date }}</td>
+                <td>{{ vaccine.mmr1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.mmr1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.mmr2_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Varicella</th>
-                <td>{{ vaccine.var1_brand }}</td>
-                <td>{{ vaccine.var1_date }}</td>
-                <td>{{ vaccine.var2_date }}</td>
+                <td>{{ vaccine.var1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.var1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.var2_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Influenza</th>
-                <td>{{ vaccine.inf1_brand }}</td>
-                <td>{{ vaccine.inf1_date }}</td>
-                <td>{{ vaccine.inf2_date }}</td>
+                <td>{{ vaccine.inf1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.inf1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.inf2_date|default_if_none:'' }}</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Jap Encephalitis B</th>
-                <td>{{ vaccine.japb1_brand }}</td>
-                <td>{{ vaccine.japb1_date }}</td>
-                <td>{{ vaccine.japb2_date }}</td>
+                <td>{{ vaccine.japb1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.japb1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.japb2_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Hepatitis A</th>
-                <td>{{ vaccine.hepa1_brand }}</td>
-                <td>{{ vaccine.hepa1_date }}</td>
-                <td>{{ vaccine.hepa2_date }}</td>
+                <td>{{ vaccine.hepa1_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.hepa1_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hepa2_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Meningococcal</th>
-                <td>{{ vaccine.men_brand }}</td>
-                <td>{{ vaccine.men_date }}</td>
+                <td>{{ vaccine.men_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.men_date|default_if_none:'' }}</td>
                 <td></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
@@ -313,8 +313,8 @@ footer {
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Typhoid</th>
-                <td>{{ vaccine.typ_brand }}</td>
-                <td>{{ vaccine.typ_date }}</td>
+                <td>{{ vaccine.typ_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.typ_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
@@ -322,8 +322,8 @@ footer {
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">Tdap</th>
-                <td>{{ vaccine.td_brand }}</td>
-                <td>{{ vaccine.td_date }}</td>
+                <td>{{ vaccine.td_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.td_date|default_if_none:'' }}</td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
                 <td class="table-secondary"></td>
@@ -331,12 +331,12 @@ footer {
               </tr>
               <tr class="light-border">
                 <th scope="row" id="left-align">HPV</th>
-                <td>{{ vaccine.hpv11_brand }}</td>
-                <td>{{ vaccine.hpv11_date }}</td>
-                <td>{{ vaccine.hpv12_date }}</td>
-                <td>{{ vaccine.hpv21_date }}</td>
-                <td>{{ vaccine.hpv22_date }}</td>
-                <td>{{ vaccine.hpv23_date }}</td>
+                <td>{{ vaccine.hpv11_brand|default_if_none:'' }}</td>
+                <td>{{ vaccine.hpv11_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hpv12_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hpv21_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hpv22_date|default_if_none:'' }}</td>
+                <td>{{ vaccine.hpv23_date|default_if_none:'' }}</td>
               </tr>
           </tbody>
       </table>
