--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
@@ -51,129 +51,136 @@
                       </tr>
                       <tr>
                         <td>BCG</td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>4</td>
+                        <td>{{bcg_total}}</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>{{bcg_no}}</td>
                       </tr>
                       <tr>
                         <td>Hepatitis B</td>
-                        <td>1</td>
+                        <td>{{hepab_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{hepab_no}}</td>
                       </tr>
                       <tr>
                         <td>DTaP/DTwP</td>
-                        <td>1</td>
+                        <td>{{dtap_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{dtap_no}}</td>
                       </tr>
                       <tr>
                         <td>OPV/IPV</td>
-                        <td>1</td>
+                        <td>{{opv_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{opv_no}}</td>
                       </tr>
                       <tr>
                         <td>Hib</td>
-                        <td>1</td>
+                        <td>{{hib_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{hib_no}}</td>
                       </tr>
                       <tr>
                         <td>PCV</td>
-                        <td>1</td>
+                        <td>{{pcv_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{pcv_no}}</td>
                       </tr>
                       <tr>
                         <td>Rotavirus</td>
-                        <td>1</td>
+                        <td>{{rota_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{rota_no}}</td>
                       </tr>
                       <tr>
                         <td>Measles</td>
-                        <td>1</td>
+                        <td>{{msl_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{msl_no}}</td>
                       </tr>
                       <tr>
                         <td>MMR</td>
-                        <td>1</td>
+                        <td>{{mmr_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{mmr_no}}</td>
                       </tr>
                       <tr>
                         <td>Varicella</td>
-                        <td>1</td>
+                        <td>{{var_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{var_no}}</td>
                       </tr>
                       <tr>
                         <td>Influenza</td>
-                        <td>1</td>
+                        <td>{{inf_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{inf_no}}</td>
+                      </tr>
+                      <tr>
+                        <td>Annual Flu</td>
+                        <td>{{flu_total}}</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>{{flu_no}}</td>
                       </tr>
                       <tr>
                         <td>Jap Encephalitis B</td>
-                        <td>1</td>
+                        <td>{{jap_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{jap_no}}</td>
                       </tr>
                       <tr>
                         <td>Hepatitis A</td>
-                        <td>1</td>
+                        <td>{{hepaa_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{hepaa_no}}</td>
                       </tr>
                       <tr>
                         <td>Meningococcal</td>
-                        <td>1</td>
+                        <td>{{mcc_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{mcc_no}}</td>
                       </tr>
                       <tr>
                         <td>Typhoid</td>
-                        <td>1</td>
+                        <td>{{typ_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{typ_no}}</td>
                       </tr>
                       <tr>
                         <td>Tdap</td>
-                        <td>1</td>
+                        <td>{{tdap_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{tdap_no}}</td>
                       </tr>
                       <tr>
                         <td>HPV</td>
-                        <td>1</td>
+                        <td>{{hpv_total}}</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>4</td>
+                        <td>{{hpv_no}}</td>
                       </tr>
                       <tr>
                         <td>Others</td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>4</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
                       </tr>
                     </table>
                     </div>
