--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/tool.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/tool.html
@@ -61,8 +61,8 @@
                       <tr>
                         <td>BCG</td>
                         <td>{{bcg_total}}</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>{{bcg_con}}</td>
+                        <td>{{bcg_not}}</td>
                         <td>{{bcg_no}}</td>
                       </tr>
                       <tr>
