--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/tool.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/tool.html
@@ -68,120 +68,120 @@
                       <tr>
                         <td>Hepatitis B</td>
                         <td>{{hepb_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hepb_con}}</td>
+                        <td>{{hepb_not}}</td>
                         <td>{{hepb_no}}</td>
                       </tr>
                       <tr>
                         <td>DTaP/DTwP</td>
                         <td>{{dtap_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{dtap_con}}</td>
+                        <td>{{dtap_not}}</td>
                         <td>{{dtap_no}}</td>
                       </tr>
                       <tr>
                         <td>OPV/IPV</td>
                         <td>{{opv_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{opv_con}}</td>
+                        <td>{{opv_not}}</td>
                         <td>{{opv_no}}</td>
                       </tr>
                       <tr>
                         <td>Hib</td>
                         <td>{{hib_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hib_con}}</td>
+                        <td>{{hib_not}}</td>
                         <td>{{hib_no}}</td>
                       </tr>
                       <tr>
                         <td>PCV</td>
                         <td>{{pcv_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{pcv_con}}</td>
+                        <td>{{pcv_not}}</td>
                         <td>{{pcv_no}}</td>
                       </tr>
                       <tr>
                         <td>Rotavirus</td>
                         <td>{{rota_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{rota_con}}</td>
+                        <td>{{rota_not}}</td>
                         <td>{{rota_no}}</td>
                       </tr>
                       <tr>
                         <td>Measles</td>
                         <td>{{msl_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{msl_con}}</td>
+                        <td>{{msl_not}}</td>
                         <td>{{msl_no}}</td>
                       </tr>
                       <tr>
                         <td>MMR</td>
                         <td>{{mmr_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{mmr_con}}</td>
+                        <td>{{mmr_not}}</td>
                         <td>{{mmr_no}}</td>
                       </tr>
                       <tr>
                         <td>Varicella</td>
                         <td>{{var_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{var_con}}</td>
+                        <td>{{var_not}}</td>
                         <td>{{var_no}}</td>
                       </tr>
                       <tr>
                         <td>Influenza</td>
                         <td>{{inf_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{inf_con}}</td>
+                        <td>{{inf_not}}</td>
                         <td>{{inf_no}}</td>
                       </tr>
                       <tr>
                         <td>Annual Flu</td>
                         <td>{{flu_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{flu_con}}</td>
+                        <td>{{flu_not}}</td>
                         <td>{{flu_no}}</td>
                       </tr>
                       <tr>
                         <td>Jap Encephalitis B</td>
                         <td>{{jap_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{jap_con}}</td>
+                        <td>{{jap_not}}</td>
                         <td>{{jap_no}}</td>
                       </tr>
                       <tr>
                         <td>Hepatitis A</td>
                         <td>{{hepaa_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hepaa_con}}</td>
+                        <td>{{hepaa_not}}</td>
                         <td>{{hepaa_no}}</td>
                       </tr>
                       <tr>
                         <td>Meningococcal</td>
                         <td>{{mcc_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{mcc_con}}</td>
+                        <td>{{mcc_not}}</td>
                         <td>{{mcc_no}}</td>
                       </tr>
                       <tr>
                         <td>Typhoid</td>
                         <td>{{typ_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{typ_con}}</td>
+                        <td>{{typ_not}}</td>
                         <td>{{typ_no}}</td>
                       </tr>
                       <tr>
                         <td>Tdap</td>
                         <td>{{tdap_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{tdap_con}}</td>
+                        <td>{{tdap_not}}</td>
                         <td>{{tdap_no}}</td>
                       </tr>
                       <tr>
                         <td>HPV</td>
                         <td>{{hpv_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hpv_con}}</td>
+                        <td>{{hpv_not}}</td>
                         <td>{{hpv_no}}</td>
                       </tr>
                       <tr>
