--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/update-staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/update-staff.html
@@ -54,7 +54,7 @@
 			<table class="table table-secondary table-striped table-bordered table-sm table-hover ">
 				
 					<tr class=" align-middle">
-						<th>Title</th>
+						<th>Title</a></th>
 						<th>First Name</th>
 						<th>Last Name</th>
 						<th>Username</th>
@@ -62,14 +62,14 @@
 					<!-- {% if notExist != "" %}
 					<h3>{{notExist}}</h3>
 					{% endif %} -->
-
+			
 					{% for staff in staffs %}
 					
 					<tr>
-						<td><a href="{% url 'staff-profile' staff.id %}" ></a>{{staff.title}}</td>
-						<td><a href="{% url 'staff-profile' staff.id %}" ></a>{{staff.first_name}}</td>
-						<td><a href="{% url 'staff-profile' staff.id %}" ></a>{{staff.last_name}}</td>
-						<td><a href="{% url 'staff-profile' staff.id %}" ></a>{{staff.user.username}}</td>
+						<td><a href="{% url 'staff-profile' staff.id %}">{{staff.title}}</a></td>
+						<td><a href="{% url 'staff-profile' staff.id %}" >{{staff.first_name}}</a></td>
+						<td><a href="{% url 'staff-profile' staff.id %}" >{{staff.last_name}}</a></td>
+						<td><a href="{% url 'staff-profile' staff.id %}" >{{staff.user.username}}</a></td>
 					</tr>
 					{% endfor %}
 
