--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -61,7 +61,7 @@
     </table>
     </div>
 
-    <form action="due-vaccine" method="get">
+    <form method="post">
         <div class="modal-body" style="color: black">
             {% csrf_token %}
             <center>
@@ -84,6 +84,38 @@
             </div>   
         </div>
     </form>
+
+
+<!-- create button -->
+<div class="col-sm-8">
+
+    <!-- search results -->
+    <div class="card card-body">
+        <h5 class="card-title">Results
+        </h5>
+        <table class="table table-primary table-striped table-bordered table-sm table-hover">
+            
+                <tr>
+                    <th>Record #</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Date of Birth</th>
+                </tr>
+                {% if notExist != "" %}
+                <h3>{{notExist}}</h3>
+                {% endif %}
+
+                {% for patient in patients %}
+                
+                <tr>
+                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.id}}</a></td>
+                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.first_name}}</a></td>
+                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.last_name}}</a></td>
+                    <td> <a href="{% url 'patient-profile' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
+                </tr>
+                {% endfor %}
+
+        </table>
 </div>
 
 
