--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -76,9 +76,10 @@
                         <td>Enter date
                         <input type="date" id="date" name="date">
                         </td>
+                        <td><button id="submit_button" type="submit" class="btn btn-primary">Enter</button></td>
                       </tr>
                     </table>
-                    <button id="submit_button" type="submit" class="btn btn-primary">Enter</button>
+                    
                 </div> 
             <div>
             </div>   
