added meniggo sa report

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-vaccine.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-vaccine.html
@@ -410,7 +410,7 @@
                                 <tr>
                                     <td scope="col">Annual</td>
                                     <td scope="col">Influenza</td>
-                                    <td scope="col"></td>
+                                    <td scope="col">Once every year</td>
                                     <td scope="col">{{ form.anf_brand}}</td>
                                     <td scope="col">{{ form.anf_date}}</td>
                                     <td scope="col">{{ form.anf_loc}}</td>
