--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/display-vaccine.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/display-vaccine.html
@@ -406,7 +406,7 @@
                         <tr>
                             <td scope="col">Annual</td>
                             <td scope="col">Influenza</td>
-                            <td scope="col"></td>
+                            <td scope="col">Once every year</td>
                             <td scope="col">{{ vaccine.anf_brand|default_if_none:''}}</td>
                             <td scope="col">{{ vaccine.anf_date|date:"m/d/Y"|default_if_none:''}}</td>
                             <td scope="col">{{ vaccine.anf_loc|default_if_none:''}}</td>
