--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/report.html
@@ -17,23 +17,32 @@
           <div class="card border-info" style="margin-left: 5%; margin-right: 5%">
               <div class="card-body">
                 <div>
-                    <br>
-                    <form method="get">
+                    <br><br>
+                    <form method="get" action="{% url 'report' %}">
                       <div class="row">
-                        <div class="col-sm-2"></div>
+                        <div class="col-sm-1"></div>
                         <div class="col-sm-3">
-                          <label for="from">From:</label>
-                          <input type="text" class="form-control" id="from" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy">
+                          <div class="input-group">
+                          <span class="input-group-text">From:</span>
+                          <input type="text" class="form-control" id="from" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy" name="from">
+                          </div>
                         </div>
-                        <div class="col-sm-2"></div>
+                        <div class="col-sm-1"></div>
                         <div class="col-sm-3">
-                          <label for="to">To:</label>
-                          <input type="text" class="form-control" id="to" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy">
+                          <div class="input-group">
+                          <span class="input-group-text">To:</span>
+                          <input type="text" class="form-control" id="to" placeholder="mm/dd/yyyy" aria-label="mm/dd/yyyy" name="to">
+                          </div>
                         </div>
-                        <div class="col-sm-2"></div>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-3">
+                          <button class="btn btn-secondary" type="submit">
+                          <i class="fas fa-search"></i>
+                          Find</button></div>
                       </div>
+                      
                     </form>
-                <br><br>
+                <br>
                 </div>
                 <div>
                     <table class="table table-bordered table-sm border-dark text-center">
@@ -52,127 +61,127 @@
                       <tr>
                         <td>BCG</td>
                         <td>{{bcg_total}}</td>
-                        <td>0</td>
-                        <td>0</td>
+                        <td>{{bcg_con}}</td>
+                        <td>{{bcg_not}}</td>
                         <td>{{bcg_no}}</td>
                       </tr>
                       <tr>
                         <td>Hepatitis B</td>
-                        <td>{{hepab_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>{{hepab_no}}</td>
+                        <td>{{hepb_total}}</td>
+                        <td>{{hepb_con}}</td>
+                        <td>{{hepb_not}}</td>
+                        <td>{{hepb_no}}</td>
                       </tr>
                       <tr>
                         <td>DTaP/DTwP</td>
                         <td>{{dtap_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{dtap_con}}</td>
+                        <td>{{dtap_not}}</td>
                         <td>{{dtap_no}}</td>
                       </tr>
                       <tr>
                         <td>OPV/IPV</td>
                         <td>{{opv_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{opv_con}}</td>
+                        <td>{{opv_not}}</td>
                         <td>{{opv_no}}</td>
                       </tr>
                       <tr>
                         <td>Hib</td>
                         <td>{{hib_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hib_con}}</td>
+                        <td>{{hib_not}}</td>
                         <td>{{hib_no}}</td>
                       </tr>
                       <tr>
                         <td>PCV</td>
                         <td>{{pcv_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{pcv_con}}</td>
+                        <td>{{pcv_not}}</td>
                         <td>{{pcv_no}}</td>
                       </tr>
                       <tr>
                         <td>Rotavirus</td>
                         <td>{{rota_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{rota_con}}</td>
+                        <td>{{rota_not}}</td>
                         <td>{{rota_no}}</td>
                       </tr>
                       <tr>
                         <td>Measles</td>
                         <td>{{msl_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{msl_con}}</td>
+                        <td>{{msl_not}}</td>
                         <td>{{msl_no}}</td>
                       </tr>
                       <tr>
                         <td>MMR</td>
                         <td>{{mmr_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{mmr_con}}</td>
+                        <td>{{mmr_not}}</td>
                         <td>{{mmr_no}}</td>
                       </tr>
                       <tr>
                         <td>Varicella</td>
                         <td>{{var_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{var_con}}</td>
+                        <td>{{var_not}}</td>
                         <td>{{var_no}}</td>
                       </tr>
                       <tr>
                         <td>Influenza</td>
                         <td>{{inf_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{inf_con}}</td>
+                        <td>{{inf_not}}</td>
                         <td>{{inf_no}}</td>
                       </tr>
                       <tr>
                         <td>Annual Flu</td>
                         <td>{{flu_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{flu_con}}</td>
+                        <td>{{flu_not}}</td>
                         <td>{{flu_no}}</td>
                       </tr>
                       <tr>
                         <td>Jap Encephalitis B</td>
                         <td>{{jap_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{jap_con}}</td>
+                        <td>{{jap_not}}</td>
                         <td>{{jap_no}}</td>
                       </tr>
                       <tr>
                         <td>Hepatitis A</td>
                         <td>{{hepaa_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hepaa_con}}</td>
+                        <td>{{hepaa_not}}</td>
                         <td>{{hepaa_no}}</td>
                       </tr>
                       <tr>
                         <td>Meningococcal</td>
                         <td>{{mcc_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{mcc_con}}</td>
+                        <td>{{mcc_not}}</td>
                         <td>{{mcc_no}}</td>
                       </tr>
                       <tr>
                         <td>Typhoid</td>
                         <td>{{typ_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{typ_con}}</td>
+                        <td>{{typ_not}}</td>
                         <td>{{typ_no}}</td>
                       </tr>
                       <tr>
                         <td>Tdap</td>
                         <td>{{tdap_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{tdap_con}}</td>
+                        <td>{{tdap_not}}</td>
                         <td>{{tdap_no}}</td>
                       </tr>
                       <tr>
                         <td>HPV</td>
                         <td>{{hpv_total}}</td>
-                        <td>2</td>
-                        <td>3</td>
+                        <td>{{hpv_con}}</td>
+                        <td>{{hpv_not}}</td>
                         <td>{{hpv_no}}</td>
                       </tr>
                       <tr>
