fixed age on display

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-profile.html
@@ -49,7 +49,7 @@
                     <td class="table-warning">Date of Birth:</td>
                     <td class="table-light" colspan="3">{{ record.bday|date:"m/d/Y" }}</td>
                     <td class="table-warning">Age:</td>
-                    <td class="table-light" colspan="3">{{ record.age }}</td>
+                    <td class="table-light" colspan="3">{{ age|upper }}</td>
                   </tr>
                   <tr>
                     <td class="table-warning"><b>CONTACT #</b></td>
