--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/update-patient-profile.html
@@ -46,8 +46,8 @@
                     <td class="table-light">{{ form.gender }}</td>
                     <td class="table-warning">Date of Birth:<span style="color: red;">*</span></td>
                     <td class="table-light" colspan="3">{{ form.bday }}</td>
-                    <td class="table-warning">Age:<span style="color: red;">*</span></td>
-                    <td class="table-light" colspan="3">{{ form.age }}</td>
+                    <td class="table-warning"></td>
+                    <td class="table-warning" colspan="3">{{ age }}</td>
                   </tr>
                   <tr>
                     <td class="table-warning"><b>CONTACT #</b></td>
